--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "swiggy",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Food Delivery app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "parcel-bundler": "^1.12.5"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  }
+  "author": "Sahil Motwani",
+  "license": "ISC"
 }
