--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   },
   "keywords": [],
   "author": "Sahil Motwani",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "parcel": "^2.13.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
+  }
 }
